# karaoke

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/api/: generate.ts  search.ts
frontend/src/components/: GenerationConfig.tsx  GenerationProgress.tsx  SearchInput.tsx  SearchResults.tsx  VideoCard.tsx
frontend/src/hooks/: useDebounce.ts  useGenerationJob.ts  useVideoSearch.ts
src/karaoke/: align.py  api.py  cli.py  download.py  jobs.py  lyrics.py  models.py  pipeline.py  render.py  search.py  separate.py  text_utils.py
tests/: test_align.py  test_api.py  test_download.py  test_e2e_non_english.py  test_jobs.py  test_lyrics.py  test_models.py  test_pipeline.py  test_render.py  test_search.py  test_separate.py  test_text_utils.py
