[project]
name = "karaoke"
version = "0.1.0"
description = "Generate karaoke videos from YouTube song URLs"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.0.0",
    "demucs>=4.0.0",
    "stable-ts>=2.0.0",
    "openai-whisper>=20230314",
    "syncedlyrics>=1.0.1",
]

[project.scripts]
karaoke = "karaoke.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/karaoke"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
